Praktikum dan Latihan 3

--- a/minggu2/Praktikum/Biodata.html
+++ b/minggu2/Praktikum/Biodata.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <style>
+
 table {
   font-family: times new roman, arial;
   border-collapse: collapse;
@@ -63,55 +64,55 @@ tr {
 
 <h2 align="center">Jadwal KRS</h2>
 
-<table>
-<tr>
-    <th>No</th>
-    <th>Kode Mata Kuliah</th>
-	<th>Kelompok</th>
-	<th>Mata Kuliah</th>
-	<th>SKS</th>
-  </tr>
-  <tr>
-    <th>1</th>
-    <th>A11.54101</th>
-	<th>A11.4101</th>
-	<th>Kalkulus</th>
-	<th>4</th>
-  </tr>
-  <tr>
-    <th>2</th>
-    <th>A11.54105</th>
-	<th>A11.4101</th>
-	<th>Dasar Pemrograman</th>
-	<th>4</th>
-  </tr>
-  <tr>
-    <th>3</th>
-    <th>A11.54302</th>
-	<th>A11.4101</th>
-	<th>Matematika Diskrit</th>
-	<th>3</th>
-  </tr>
-  <tr>
-    <th>4</th>
-    <th>A11.54314</th>
-	<th>A11.4101</th>
-	<th>Pemrograman Berbasis Web</th>
-	<th>2</th>
-  <tr>
-    <th>5</th>
-    <th>A11.54403</th>
-	<th>A11.4101</th>
-	<th>Organisasi Dan Arsitektur Komputer</th>
-	<th>3</th>
-  </tr>
-  <tr>
-    <th>6</th>
-    <th>AF201704</th>
-	<th>A11.4101</th>
-	<th>Dasar Dasar Komputasi</th>
-	<th>2</th>
-  </tr>
- </table>
+<table kelas="KRS">
+ <tr kelas="td1">
+  <th kelas="th1">No</th>
+  <th kelas="th1">Kode Mata Kuliah</th>
+	<th kelas="th1">Kelompok</th>
+	<th kelas="th1">Mata Kuliah</th>
+	<th kelas="th1">SKS</th>
+ </tr>
+ <tr kelas="td1">
+  <th kelas="th1">1</th>
+  <th kelas="th1">A11.54101</th>
+	<th kelas="th1">A11.4101</th>
+	<th kelas="th1">Kalkulus</th>
+	<th kelas="th1">4</th>
+ </tr>
+ <tr kelas="td1">
+  <th kelas="th1">2</th>
+  <th kelas="th1">A11.54105</th>
+	<th kelas="th1">A11.4101</th>
+	<th kelas="th1">Dasar Pemrograman</th>
+	<th kelas="th1">4</th>
+ </tr>
+ <tr kelas="td1">
+  <th kelas="th1">3</th>
+  <th kelas="th1">A11.54302</th>
+	<th kelas="th1">A11.4101</th>
+	<th kelas="th1">Matematika Diskrit</th>
+	<th kelas="th1">3</th>
+ </tr>
+ <tr kelas="td1">
+  <th kelas="th1">4</th>
+  <th kelas="th1">A11.54314</th>
+	<th kelas="th1">A11.4101</th>
+	<th kelas="th1">Pemrograman Berbasis Web</th>
+	<th kelas="th1">2</th>
+ <tr kelas="td1">
+  <th kelas="th1">5</th>
+  <th kelas="th1">A11.54403</th>
+	<th kelas="th1">A11.4101</th>
+	<th kelas="th1">Organisasi Dan Arsitektur Komputer</th>
+	<th kelas="th1">3</th>
+ </tr>
+ <tr kelas="td1">
+  <th kelas="th1">6</th>
+  <th kelas="th1">AF201704</th>
+	<th kelas="th1">A11.4101</th>
+	<th kelas="th1">Dasar Dasar Komputasi</th>
+	<th kelas="th1">2</th>
+ </tr>
+</table>
 </body>
 </html>
