--- a/minggu2/Praktikum/Biodata.html
+++ b/minggu2/Praktikum/Biodata.html
@@ -23,6 +23,7 @@ tr {
 </head>
 <body>
 
+<!-- Tabel Biodata -->
 <h1 align="center">Biodata</h1>
 
 <table>
@@ -62,6 +63,7 @@ tr {
   </tr>
 </table>
 
+<!-- Tabel KRS -->
 <h2 align="center">Jadwal KRS</h2>
 
 <table kelas="KRS">
